--- a/styles/style.css
+++ b/styles/style.css
@@ -132,3 +132,30 @@ span {
     font-size: .85rem;
     font-weight: 700;
 }
+
+
+/* Panel  */
+
+.panel {
+    height: 40px;
+    background-color: #222f3d;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.panel-options p {
+    display: inline;
+    margin-left: 15px;
+}
+
+.panel-options {
+    width: 70%;
+    font-size: 0.85rem;
+}
+
+.panel-deals {
+    font-size: .9rem;
+    font-weight: 700;
+}
