--- a/styles/style.css
+++ b/styles/style.css
@@ -159,3 +159,32 @@ span {
     font-size: .9rem;
     font-weight: 700;
 }
+
+
+/* Hero section  */
+
+.hero-section {
+    background-image: url("../assets/images/hero_section.jpg");
+    background-size: cover;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.hero-message {
+    background-color: white;
+    color: black;
+    font-size: .85rem;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    margin-bottom: 25px;
+}
+
+.hero-message a {
+    color: #007185;
+    text-decoration: none;
+}
