--- a/styles/style.css
+++ b/styles/style.css
@@ -100,7 +100,6 @@
 .search-language {
     font-size: 1.2rem;
     background-color: #0f1111;
-    /* background-color: blue; */
     color: white;
     border: none;
 }
@@ -200,7 +199,6 @@ span {
 }
 
 .box {
-    /* border: 2px solid black; */
     height: 300px;
     width: 23%;
     background-color: white;
@@ -212,7 +210,6 @@ span {
     height: 250px;
     background-size: cover;
     background-repeat: no-repeat;
-    /* margin: 1rem; */
 }
 
 .box-content {
@@ -258,4 +255,45 @@ ul a {
     color: #dddddd;
     font-size: .85rem;
     margin-top: 10px;
+}
+
+.foot-panel3 {
+    background-color: #222f3d;
+    color: white;
+    border-top: 1px solid white;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo {
+    background-image: url("../assets/logo/White-Amazon-Logo-PNG-HD-Quality.png");
+    background-size: cover;
+    height: 40px;
+    width: 140px;
+}
+
+
+/* foot panel 4 */
+
+.foot-panel4 {
+    background-color: #0f1111;
+    color: white;
+    height: 80px;
+    font-size: .85rem;
+    text-align: center;
+}
+
+.pages {
+    padding-top: 25px;
+}
+
+.pages a {
+    text-decoration: none;
+    color: white;
+}
+
+.copyright {
+    padding-top: 5px;
 }
